fix: add styles to align with the current code base styles

--- a/src/shared/ui/link-custom/link-custom.module.scss
+++ b/src/shared/ui/link-custom/link-custom.module.scss
@@ -56,7 +56,7 @@
     width: 100%;
   }
 
-  @media (hover: hover) and (pointer: fine) {
+  @include media-hover {
     &:hover {
       border-color: $color-gray-600;
       background-color: $color-gray-600;
